final updates for notifications